modules/gdscript/tests/scripts/analyzer/errors/typed_array_init_with_unconvertable_in_literal.gd
func test():
	var unconvertible := 1
	var typed: Array[Object] = [unconvertible]
	print('not ok')
